Refactor dependency management

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">TaskyUI</string>
+    <string name="web_client_id">1061206203510-p226pt7bp2oakm7i6veoc0fibp37vdve.apps.googleusercontent.com</string>
 </resources>
